# spark-plug_cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  format-check.yml
docs/html/: classsparkplug_1_1PayloadBuilder.html  classsparkplug_1_1Publisher.html  doxygen.css  doxygen_crawl.html  index.html  menudata.js  navtreedata.js  navtreeindex0.js  payload__builder_8hpp_source.html  publisher_8hpp_source.html
docs/html/search/: all_f.js  searchdata.js
examples/: CMakeLists.txt  command_handling_example.cpp  host_application_example.cpp  publisher_device_example.cpp  publisher_dynamic_metrics.cpp  publisher_example.cpp  publisher_example_c.c  publisher_mimic.cpp  publisher_tls_example.cpp  subscriber_example.cpp  subscriber_example_c.c  subscriber_example_debug.cpp  subscriber_mimic_debug.cpp  subscriber_multi_group_cli.cpp  subscriber_tls_example.cpp  torture_test_publisher.cpp  torture_test_subscriber.cpp
include/sparkplug/: host_application.hpp  mqtt_handle.hpp  payload_builder.hpp  publisher.hpp  sparkplug_c.h  subscriber.hpp  topic.hpp
proto/: CMakeLists.txt
scripts/: format.sh
src/: CMakeLists.txt  c_bindings.cpp  edge_node.cpp  host_application.cpp  payload_builder.cpp  publisher.cpp  subscriber.cpp  topic.cpp
tests/: CMakeLists.txt  test_c_api.c  test_command_handling.cpp  test_compliance.cpp  test_device_apis.cpp  test_error_handling.cpp  test_payload_builder.cpp  test_topic.cpp
