# examples/CMakeLists.txt
add_executable(publisher_example publisher_example.cpp)
target_link_libraries(publisher_example PRIVATE sparkplug_cpp)

add_executable(publisher_dynamic_metrics publisher_dynamic_metrics.cpp)
target_link_libraries(publisher_dynamic_metrics PRIVATE sparkplug_cpp)

add_executable(publisher_device_example publisher_device_example.cpp)
target_link_libraries(publisher_device_example PRIVATE sparkplug_cpp)

add_executable(subscriber_example subscriber_example.cpp)
target_link_libraries(subscriber_example PRIVATE sparkplug_cpp)

add_executable(subscriber_example_debug subscriber_example_debug.cpp)
target_link_libraries(subscriber_example_debug PRIVATE sparkplug_cpp)

# C API examples
add_executable(publisher_example_c publisher_example_c.c)
target_link_libraries(publisher_example_c PRIVATE sparkplug_c)

add_executable(subscriber_example_c subscriber_example_c.c)
target_link_libraries(subscriber_example_c PRIVATE sparkplug_c)